Content: Hid Learnium project

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                 <!-- End of Project -->
 
                 <!-- Project -->
-                <div id="project" class="project">
+                <!-- <div id="project" class="project">
                     <a href="/pages/learnium.html" target="_blank" rel="noopener no-referrer">
                         <div id="previewImages" class="project-preview-images-wrapper">
                             <div class="preview-image preview-image-1">
@@ -243,7 +243,7 @@
                             </div>
                         </a>
                     </div>
-                </div>
+                </div> -->
                 <!-- End of Project -->
 
                     <!-- Project -->
