Added About me page

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <form id="contactMeForm">
                     <div class="input-wrapper">
                         <div class="input-group">
-                            <label for="username">Username:</label>
+                            <label for="username">Name:</label>
                             <input type="text" id="username" name="name" placeholder="Your Full Name" required>
                         </div>
                         <div class="input-group">
