--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -36,14 +36,36 @@
     </nav>
 
     
-    <main class="main-section">
-        <div class="picture-container">
-            <!-- <h1 class="page-title">About Me</h1> -->
-            <img class="floating" src="../assets/aboutMe/DSCF4511.jpg" alt="">
+    <div class="main-wrapper">
+        <main class="main-section">
+            <!-- <h1 class="about-me-title">Pablo</h1> -->
+            <div class="portrait-wrapper">
+                <div class="picture-container">
+                    <img class="portrait" src="../assets/aboutMe/pablo.png" alt="">
+                </div>
+            </div>
+            
+        <!--
+            <div class="dot-wrapper about-me">
+                <div class="dot"></div>
+            </div>
+            <div class="dot-wrapper honest-me">
+                <div class="dot"></div>
+            </div>
+            <div class="dot-wrapper one-joke">
+                <div class="dot"></div>
+            </div> -->
+        </main>
+        <div class="text-wrapper">
+            <p>
+                Hey there! I'm just a guy who loves designing, coding, bouldering, and playing frisbee. I enjoy taking inspiring ideas and bringing them to life in my projects.
+            </p>
+            <p>
+                Feel free to contact me on <a href="https://linkedin.com/in/palimv" target="_blank">
+                    LinkedIn <i class="fa-brands fa-linkedin"></i>
+                </a> or via email: pablo@palitriestodesign.com
+            </p>
         </div>
-        <div class="text">
-            <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis maxime consequuntur, dignissimos laudantium totam laboriosam ratione, deserunt maiores mollitia necessitatibus labore quidem exercitationem odio deleniti, ab accusantium? Iste placeat excepturi accusantium ad blanditiis, incidunt necessitatibus ex explicabo error laboriosam perspiciatis.</p>
-        </div>
-    </main>
+    </div>
 </body>
 </html>
