Style: Improved About Me

--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -56,14 +56,18 @@
                 <div class="dot"></div>
             </div> -->
         </main>
+        <div class="about-me-grid">
+            <div class="about-me-cell"></div>
+            <div class="about-me-cell"></div>
+            <div class="about-me-cell"></div>
+            <div class="about-me-cell content"></div>
+        </div>
         <div class="text-wrapper">
-            <p>
+            <p class="floating">
                 Hey there! I'm just a guy who loves designing, coding, bouldering, and playing frisbee. I enjoy taking inspiring ideas and bringing them to life in my projects.
             </p>
             <p>
-                Feel free to contact me on <a href="https://linkedin.com/in/palimv" target="_blank">
-                    LinkedIn <i class="fa-brands fa-linkedin"></i>
-                </a> or via email: pablo@palitriestodesign.com
+                Please, feel free to connect with me on <a href="https://linkedin.com/in/palimv" target="_blank">LinkedIn <i class="fa-brands fa-linkedin"></i></a> or contact me via email: pablo@palitriestodesign.com
             </p>
         </div>
     </div>
