About Me: switchet to webp

--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -43,7 +43,7 @@
             <!-- <h1 class="about-me-title">Pablo</h1> -->
             <div class="portrait-wrapper">
                 <div class="picture-container">
-                    <img class="portrait" src="../assets/aboutMe/pablo.png" alt="">
+                    <img class="portrait" src="../assets/aboutMe/pablo.webp" alt="">
                 </div>
             </div>
             
