About Me: Swtiched to flex from grid

--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -43,55 +43,49 @@
             <!-- <h1 class="about-me-title">Pablo</h1> -->
             <div class="portrait-wrapper">
                 <div class="picture-container">
-                    <img class="portrait" src="../assets/aboutMe/pablo.webp" alt="">
+                    <img id="portraitImage" class="portrait" src="../assets/aboutMe/pablo.webp" alt="">
                 </div>
             </div>
-            
-        <!--
-            <div class="dot-wrapper about-me">
-                <div class="dot"></div>
-            </div>
-            <div class="dot-wrapper honest-me">
-                <div class="dot"></div>
-            </div>
-            <div class="dot-wrapper one-joke">
-                <div class="dot"></div>
-            </div> -->
         </main>
+
         <div class="about-me-grid">
-            <div class="about-me-cell about-me">
-                <button id="aboutMeButton" class="pushable">
-                    <span class="shadow"></span>
-                    <span class="edge"></span>
-                    <span class="front">
-                    <p>About Me</p>
-                    </span>
-              </button>
-            </div>
-            <div class="about-me-cell honest-me">
-                <button id="honestMeButton" class="pushable">
-                    <span class="shadow"></span>
-                    <span class="edge"></span>
-                    <span class="front">
-                    <p>Honest Me</p>
-                    </span>
-              </button>
-            </div>
-            <div class="about-me-cell joke">
-                <button id="jokeButton" class="pushable">
-                    <span class="shadow"></span>
-                    <span class="edge"></span>
-                    <span class="front">
-                      <p>Want a Joke?</p>
-                    </span>
+
+            <!-- Buttons Wrapper -->
+            <div class="buttons-wrapper">
+                <div class="about-me-cell about-me">
+                    <button id="aboutMeButton" class="pushable">
+                        <span class="shadow"></span>
+                        <span class="edge"></span>
+                        <span class="front">
+                        <p>About Me</p>
+                        </span>
                   </button>
+                </div>
+                <div class="about-me-cell honest-me">
+                    <button id="honestMeButton" class="pushable">
+                        <span class="shadow"></span>
+                        <span class="edge"></span>
+                        <span class="front">
+                        <p>Honest Me</p>
+                        </span>
+                  </button>
+                </div>
+                <div class="about-me-cell joke">
+                    <button id="jokeButton" class="pushable">
+                        <span class="shadow"></span>
+                        <span class="edge"></span>
+                        <span class="front">
+                          <p>Want a Joke?</p>
+                        </span>
+                      </button>
+                </div>
             </div>
+            <!-- End of Buttons Wrapper -->
+
+
             <div id="aboutMeContent" class="about-me-cell content"><p>Choose an option</p></div>
         </div>
         <div class="text-wrapper">
-            <!-- <p class="floating">
-                Hey there! I'm just a guy who loves designing, coding, bouldering, and playing frisbee. I enjoy taking inspiring ideas and bringing them to life in my projects.
-            </p> -->
             <p>
                 Please, feel free to connect with me on <a href="https://linkedin.com/in/palimv" target="_blank">LinkedIn <i class="fa-brands fa-linkedin"></i></a> or contact me via email: pablo@palitriestodesign.com
             </p>
